# ocr

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  docker-compose.yml  ocr_lessons.md
scripts/: wait-for-vllm.sh
web/: Dockerfile  pyproject.toml
web/app/: config.py  main.py
web/app/api/: routes.py  schemas.py
web/app/static/: app.js  index.html  style.css
web/app/validation/: file_validator.py  sanitizer.py
worker/: Dockerfile  pyproject.toml
worker/app/: celery_app.py  cleanup.py  config.py  tasks.py
worker/app/converters/: input_converter.py  output_converter.py
worker/app/ocr/: docling.py  engine.py  furniture.py  hybrid_pdf.py  image_prep.py  tesseract.py
