[project]
name = "ocr-web"
version = "0.1.0"
description = "OCR web application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "python-magic>=0.4",
]
