[project]
name = "ocr-worker"
version = "0.1.0"
description = "OCR worker service"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4",
    "redis>=5.2",
    "httpx>=0.28",
    "PyMuPDF>=1.25",
    "Pillow>=11.1",
    "python-docx>=1.1",
    "pypandoc>=1.14",
    "pytesseract>=0.3",
    "pydantic-settings>=2.7",
    "python-magic>=0.4",
    "tenacity>=9.0",
]
